2321 [OneClick] fixed a problem with subtitle extraction caused by 2318
2320 [OneClick] fixed missing subtile tracks if using intermediate MKV files. Bug #710
2319 [MKV Muxer] enhanced projected file size calculation if using intermediate MKV files
2318 [OneClick] enhanced generation of demux file names
2317 [OneClick] the audio track encode selection will not be disabled anymore
2316 [OneClick] fixed audio delay handling if pgcdemux will be used together with an intermediate MKV file
2315 [OneClick] modified "and open next" behavior
2314 [OneClick] improved muxing into intermediate MKV file if necessary
2313 [OneClick] fixed using wrong chapters file if using an intermediate MKV file with VOB input
2312 [OneClick] avoid muxing into intermediate MKV file if this is not necessary
2311 [OneClick] not correctly extracted subtitle files will be ignored
2310 [OneClick] fixed AVS audio processing. Bug #711
2309 [AVS Script Creator] fixed missing DAR values in the AVS script if using "Clever (TM) anamorphic encoding"


Changelog 2296 --> 2308

Features/Changes:
[AVS Script Creator] removed cropping limit
[MP4 Muxer] allow Nero & Apple Chapters styles muxing for better interoperability with players. Patch by Eli Bildirici (#66)

Enhancements/Fixes:
[AVS Script Creator] added detailed analysis result to the log
[AVS Script Creator] fixed "TDeint (with EDI + BOB)"
[AVS Script Creator] fixed not applying film when manually choosing "Partially film"
[AVS Script Creator] fixed recreating the index file during "Analyse" if using FFMS with a non-default index file location
[AVS Script Creator] fixed wrong resize values in some cases if using cropping without anamorphic encoding
[MediaInfo] fixed wrong aspect ratio if using anamorphic AVS files
[MediaInfo] fixed wrong aspect ratio in some cases
[MKV Demuxer] fixed wrong detection of errors if file name contains "error"
[MP4 Muxer] avoid quote truncation within Chapters Names. Patch by Eli Bildirici (#66)